[package]
name = "pdrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-shutdown = "0.1.3"
clap = { version = "4.4.2", features = ["derive"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
serde_yaml = "0.9.25"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1", features = [
    "process",
    "signal",
    "macros",
    "sync",
    "rt",
    "time",
    "io-util"
] }
