[package]
name = "pdrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-shutdown = "0.1.3"
chrono = { version = "0.4.30", features = ["serde"] }
chrono-tz = "0.8.3"
clap = { version = "4.4.2", features = ["derive"] }
cron = "0.12.0"
derive_more = "0.99.17"
dotenvy = "0.15.7"
futures = "0.3.28"
nix = { version = "0.27.1", features = ["signal"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde_with = "3.3.0"
serde_yaml = "0.9.25"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1", features = [
    "process",
    "signal",
    "macros",
    "sync",
    "rt",
    "time",
    "io-util"
] }
